--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon dev/api.js",
+    "node_1": "node dev/networkNode.js 3001 http://localhost:3001",
+    "node_2": "node dev/networkNode.js 3002 http://localhost:3002",
+    "node_3": "node dev/networkNode.js 3003 http://localhost:3003",
+    "node_4": "node dev/networkNode.js 3004 http://localhost:3004",
+    "node_5": "node dev/networkNode.js 3005 http://localhost:3005",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +16,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "sha256": "^0.2.0",
     "uuid": "^8.3.2"
   }
